--- a/Tpl/default/Admin/Content/add.html
+++ b/Tpl/default/Admin/Content/add.html
@@ -37,8 +37,8 @@
                     </td>
                     <td class="textl"  colspan="7">
 <input  type="file" name="thumb" id="bimg" value="{$vo.thumb}">预览：
-               <img src="/Tpl/Uploads/s_{$vo.thumb}" id="error" onerror="this.src='/Tpl/Uploads/nopic.png'" />
-<img src="/Tpl/Uploads/nopic.png" id="warn" style="display: none;"  width="90" height="90"/>                    </td>
+               <img src="/Tpl/Uploads/s_{$vo.thumb}" id="error" onerror="this.src='/Public/images/nopic.png'" />
+<img src="/Public/images/nopic.png" id="warn" style="display: none;"  width="90" height="90"/>                    </td>
                 </tr>
             
 
