--- a/Tpl/default/Admin/Index/index.html
+++ b/Tpl/default/Admin/Index/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC “-//W3C//DTD XHTML 1.0 Transitional//EN” “http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd”>
-<html xmlns=”http://www.w3.org/1999/xhtml”>
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -17,7 +16,7 @@
             <ul>
                 <span> 管理员 , 您好！
 				<select id="changeSite">
-					  <volist name="_SESSION ['_SITE_LIST']" id="site">
+					  <volist name="$_SESSION ['_SITE_LIST']" id="site">
                     <option
                     <if condition="$_SESSION['_CURRENT_SITE']['id'] == $site['id']">
                         selected="selected"
